fix layout issue of canvas element

--- a/src/views/play-ground/play-ground.scss
+++ b/src/views/play-ground/play-ground.scss
@@ -1,47 +1,57 @@
-#play-ground-canvas {
-    background-color: #c0c0c0;
+.play-ground {
+    width: 100%;
+    height: 100%;
 
-    outline: none;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-.add-rectangle-button {
-    position: absolute;
-    right: 40px;
-    bottom: 40px;
+    #play-ground-canvas {
+        background-color: #c0c0c0;
 
-    width: 72px;
-    height: 72px;
+        outline: none;
+    }
 
-    padding-bottom: 8px;
+    .add-rectangle-button {
+        position: absolute;
+        right: 40px;
+        bottom: 40px;
 
-    color: white;
+        width: 72px;
+        height: 72px;
 
-    font-size: 40px;
+        padding-bottom: 8px;
 
-    background-color: #B39DFC;
-    border-radius: 50%;
+        color: white;
 
-    outline: none;
-    cursor: pointer;
-}
+        font-size: 40px;
 
-.delete-shape-button {
-    position: absolute;
-    right: 40px;
-    top: 40px;
+        background-color: #B39DFC;
+        border-radius: 50%;
 
-    padding: 10px;
+        outline: none;
+        cursor: pointer;
+    }
 
-    color: white;
+    .delete-shape-button {
+        position: absolute;
+        right: 40px;
+        top: 40px;
 
-    background-color: red;
+        padding: 10px;
 
-    outline: none;
-    border: 0;
-    border-radius: 4px;
+        color: white;
 
-    font-size: 18px;
-    font-weight: bold;
+        background-color: red;
 
-    cursor: pointer;
+        outline: none;
+        border: 0;
+        border-radius: 4px;
+
+        font-size: 18px;
+        font-weight: bold;
+
+        cursor: pointer;
+    }
 }
